@@ -3,7 +3,8 @@ Change log next version
 * Better error message when an actual JSON or XML path value doesn't match the expected value (issue 104).
 * Removed dependency to spring-web in example project
 * Improved support for getting a list with an explicit type using XmlPath (issue 106).
-* RestAssured.baseURI now works as expected. You can now use e.g. RestAssured.baseURI = "http://somehost.org:1234" and the subsequent requests will automatically go to that URI (issue 54).
+* RestAssured.baseURI now works as expected. You can now use e.g. RestAssured.baseURI = "http://somehost.org:1234" and the subsequent requests will automatically go to that URI as base (issue 54).
+* Rest Assured now throws a java.lang.AssertionError instead of AssertionFailedException (issue 100).
 
 Change log 1.3.1 (2011-09-20)
 -----------------------------
